Fundamentaçao teorica finalizada

--- a/abnt-uefs.bib
+++ b/abnt-uefs.bib
@@ -13,6 +13,16 @@
   url = {http://sourceforge.net/apps/ mediawiki/abntex/index.php},
   urlaccessdate = {8 nov. 2011}
 }
+@article{swamidass2007bounds,
+  title={Bounds and algorithms for fast exact searches of chemical fingerprints in linear and sublinear time},
+  author={Swamidass, S Joshua and Baldi, Pierre},
+  journal={Journal of chemical information and modeling},
+  volume={47},
+  number={2},
+  pages={302--317},
+  year={2007},
+  publisher={ACS Publications}
+}
 @article{huang2008localized,
   title={Localized co-occurrence model for fast approximate search in 3D structure databases},
   author={Huang, Zi and Shen, Heng Tao and Zhou, Xiaofang},
@@ -86,6 +96,15 @@
   volume={275},
   year={2004},
   publisher={Springer Science \& Business Media}
+}
+@article{lipinski2012experimental,
+  title={Experimental and computational approaches to estimate solubility and permeability in drug discovery and development settings},
+  author={Lipinski, Christopher A and Lombardo, Franco and Dominy, Beryl W and Feeney, Paul J},
+  journal={Advanced drug delivery reviews},
+  volume={64},
+  pages={4--17},
+  year={2012},
+  publisher={Elsevier}
 }
 
 @inproceedings{singh2004reasoning,
