Correção no paragrafo de gerenciamento de banco de dados no capitulo NatProDB

--- a/conteudo/desenvolvimento.tex
+++ b/conteudo/desenvolvimento.tex
@@ -9,7 +9,7 @@ O sistema de gerenciamento de banco de dados molecular (NatProDB) e análise de 
 Uma das principais funcionalidades implementadas no NatProDB é a capacidade de permitir ao pesquisador a criação de sua própria base de dados molecular local, onde o mesmo pode cadastrar, remover, modificar, ou importar arquivos SMI de qualquer estrutura que deseje estudar, armazenando no banco além de propriedades intrísecas de cada molécula, a estrutura molecular do composto através do descritor molecular SMILE. Tal funcionalidade simplifica para o pesquisador o processo de catalogação e gerenciamento de suas moléculas de estudo, além de facilitar a manipulação dessas estruturas para realização de busca por estruturas similares.   
 Além de uma ferramenta para catalogação de estruturas, o sistema NatProDb implementa também um filtro para busca de estruturas baseado na regra de Lipinsky \cite{lipinski2012experimental}, que descreve valores limítrofes acerca de características físico-químicas para fármacos com perfil de biodisponibilidade por via oral, a saber: Massa Molecular $\leq$ 500,  \sigla{LopP}{Coeficiente de Partição} $\leq$ 5, \sigla{HBA}{Hydrogen Bond Acceptors} $\leq$ 10, \sigla{HBD}{Hydrogen Bond Donor} $\leq$ 5.
 
-É importante salientar que o sistema NatProDB não realiza a computação dos valores de cada uma das propriedades citadas anteriormente para cada molécula presente no banco, tais dados são inseridos e/ou importados pelo próprio pesquisador na efetivação de um cadastro de molécula, ou mesmo através de alteração dos dados da mesma.
+É importante salientar que o sistema NatProDB não realiza a computação dos valores de cada uma das propriedades citadas anteriormente, tais dados são inseridos e/ou importados pelo próprio pesquisador na efetivação de um cadastro de molécula, ou mesmo através de alteração dos dados da mesma.
 
 \section{Triagem Virtual de Moléculas Baseado no Conceito de Similaridade Molécular}
 
