Metodologia quase pronta

--- a/abnt-uefs.bib
+++ b/abnt-uefs.bib
@@ -337,7 +337,14 @@
   pages={4},
   year={2011}
 }
-
+@article{varnek2011fragment,
+  title={Fragment Descriptors in Structure--Property Modeling and Virtual Screening},
+  author={Varnek, Alexandre},
+  journal={Chemoinformatics and Computational Chemical Biology},
+  pages={213--243},
+  year={2011},
+  publisher={Springer}
+}
 @book{todeschini2008handbook,
   title={Handbook of Molecular Descriptors},
   author={Todeschini, R. and Consonni, V. and Mannhold, R. and Kubinyi, H. and Timmerman, H.},
@@ -370,6 +377,12 @@
   pages={177--182},
   year={2005},
   publisher={ACS Publications}
+}
+@misc{patterns2003model,
+  title={Model-View-Controller},
+  author={Patterns, DESIGN},
+  year={2003},
+  publisher={Microsoft Patterns \& Practices, http://msdn. microsoft. com/practices/type/Patterns/Enterprise/DesMVC}
 }
 
 @article{kumar2012,
