--- a/conteudo/desenvolvimento.tex
+++ b/conteudo/desenvolvimento.tex
@@ -13,7 +13,9 @@ Além de uma ferramenta para catalogação de estruturas, o sistema NatProDb imp
 
 \section{Triagem Virtual de Moléculas Baseado no Conceito de Similaridade Molécular}
 
-         
+ O sistema NatProDB implementa um algoritmo para triagem de moléculas similares a um molécula de entrada baseada na abordagem descrita na seção 2.2.3, com a ressalva de que ao invés de utilizar o coeficiente de Tanimoto, o sistema utiliza como métrica o coeficiente de Tversky. Para a comparação de estruturas, o sistema armazena as características estruturais da molécula em formato SMILE no seu banco de dados, e ao acessar a rotina de triagem de moléculas por similaridade, o pesquisador pode fornecer  um SMILE de entrada, correspondente a molécula para a qual se procura estruturas similares no banco, e selecionar também o grau de similaridade desejado para busca, variando desde 50-100\%. O sistema por sua vez realiza uma varredura em todo o banco de dados selecionado as moléculas cujo grau de similaridade é igual ou superior ao grau selecionado pelo usuário. Além disso, é possível para o pesquisador aplicar o filtro de Lipinski (Já discutido em seções anteriores), caso as moléculas que ele deseja buscar devam apresentar propriedades específicas que lhes garantem um perfil de biodisponibilidade via oral.
+
+Quando o pesquisador insere uma molécula alvo para realização de uma triagem no banco de dados por moléculas com determinado grau de similaridade, o NatProDB realiza uma chamada a biblioteca indigo toolkit, tal biblioteca realiza duas funções primordiais para computação de similaridade molecular. Primeiramente como exitem diversas formas de gerar um SMILE para uma molécula \cite{kumar2012}, tanto na molécula alvo, como também nas moléculas do banco, é aplicado um algoritmo para canonização de SMILES, para evitar divergencia de resultados devido estruturas representadas sobre diferentes formatações de SMILES. Além disso, a biblioteca indigo toolkit também implementa algoritmos para geração de fingerprints e computação de similaridade molecular baseados no coeficiente de Tversky, ambas funcionalidades são aproveitadas pelo NatProDB para realização da triagem.               
 
 \begin{figure}[!htb]
 	\centering
