--- a/conteudo/metodologia.tex
+++ b/conteudo/metodologia.tex
@@ -1,6 +1,26 @@
 
 \chapter{Metodologia}
 \label{chap:metodo}
-\textcolor{red}{Descrever as principais ações realizadas. É preciso justificar, com base na
-literatura, a escolha feita pela metodologia, técnicas e instrumentos.}
+Neste capítulo será apresentado os métodos e ferramentas aplicados no
+desenvolvimento e implementação do algoritmo a ser adaptado no NatProDB. Também será
+apresentado a metodologia dos testes realizados sobre o algoritmo escolhido para adptação ao
+NatProDB.
 
+\section{FERRAMENTAS UTILIZADAS PARA IMPLEMENTAÇÃO}
+
+Tanto o módulo de gerenciamento de banco de dados do sistema NatProDB, assim como o método aplicado para  realização de triagem de moléculas baseado no coeficiente de similaridade molecular foram desenvolvidos baseados no paradigma de Programação Orientada à Objetos (POO), e utilizando como padrão de projeto o \textit{Model View Controller}, visando assim desacoplar o código do sistema, e também facilitar a manutenção e inclusão de novas funcionalidades no mesmo \cite{patterns2003model}. A implementação do sistema, assim como o desenvolvimento do algoritmo de cálculo de similaridade molecular fora realizados utilizando como linguagem de programação Java devido ao fato dessa linguagem de programação ser multi-plataforma (capaz de ser executada em vários sistemas operacionais),  gratuita ,e também por questões de compatibilidade com a biblioteca indigo toolkit e com o próprio módulo de gerenciamento de banco de dados do NatProDB. O ambiente selecionado para o desenvolvimento foi o NetBeans 8.1.
+
+\section{ALGORITMO E MÉTRICA PARA CÁLCULO DE SIMILARIDADE NO NATPRODB}
+
+ Conforme já discutido na seção 2.2, a escolha do descritor molécular a ser utilizado é um ponto chave para decisão sobre que algoritmo/métrica melhor se adequa para comparação de similaridade entre moléculas \cite{todeschini2008handbook}. Nesta perspectiva, o sistema NatProDB utiliza dois descritores moleculares para realizar cálculo de similaridade molecular: SMILES, e Fingerprint. Os SMILES são utilizados para armazenar no banco de dados do sistema a estrutura física das moléculas devido a sua simplicidade na representação da molécula em formato 2D e também baixo custo computacional para armazenamento das caracteristicas estruturais dos compostos. Os SMILES do ligante (estrutura de interesse do pesquisador) e das moléculas presentes no banco de dados do NatProDB são utilizadas na fase de pré-processamento das estruturas, onde as mesmas são preparadas para posterior comparação de similaridade. Nesta fase, devido ao fato de existirem diversos métodos para geração de SMILES para uma molécula \cite{kumar2012}, visando evitar possíveis distorções nos resultados da comparação de similaridade entre as estruturas, tanto o SMILES do ligante quanto os SMILES das moléculas presentes no banco passam por um processamento de canonização, que basicamente re-organiza o SMILES de forma a garantir que todos os SMILES do sistema sejam obtidos seguindo o mesmo padrão de geração \cite{kumar2012}, obtendo assim estruturas únicas para cada uma das moléculas do sistema. Tal canonização é realizada no sistema pela biblioteca Indigo toolkit, que implementa algoritmo para obtenção de SMILES únicos conforme descrito por Pavlov (2011).
+
+Uma vez obtidas os SMILES canônicos das moléculas, o sistema NatProDB realiza uma conversão    
+desses SMILES para outro descritor molecular, no caso Fingerprints. Apesar da existência de metodologias de comparação de similaridade baseadas nos SMILES, como por exemplo o LINGO \cite{vidal2005lingo}, as fingerprints se mostram mais populares na literatura para realização de comparação de similaridade entre moléculas \cite{varnek2011fragment}. Primeiramente, devido a forma como a fingerprint codifica a estrutura molecular e as características intrísecas de cada composto como uma sequência de bits '1' e '0' favorece a aplicação de métricas de similaridade já difundidas na comunidade científica como: Coeficiente de Tanimoto, e Coeficiente de Tversky \cite{willett2003similarity}. Além disso, a utilização das Fingerprints para comparação de similaridade molecular, reduz a computação de similaridade entre duas moléculas a contagem e comparação de bits '1' presentes em cada uma das estruturas. Dessa maneira, para realizar  a conversão dos SMILES das moléculas para Fingerprint, o sistema NatProDB utiliza a biblioteca indigo toolkit, que implementa uma rotina para  realizar tal conversão, finalizando assim o pré-processamento das estruturas para aplicação de métrica de similaridade adotada para o sistema.
+
+A partir das fingerprints obtidas no pré-processamento das estruturas, o algorítmo implementado no sistema NatProDB para comparação de similaridade entre moléculas, segue o método descrito nas seção 2.3.1.1. Basicamente, é realizada a contagem de características em comum e distintas entre as fingerprints de entrada (ligante) e as fingerprints das moléculas do banco, e então aplicada uma métrica para obtenção do coeficiente de similaridade. Diferentemente do método descrito na seção 2.3.1.1, ao invés de utilizar o coeficiente de Tanimoto  descrito na equação (\ref{eq:Tanimoto}) como métrica de similaridade para realização da triagem em seu banco de dados, o NatProDB utiliza o coeficiente de Tversky. Tal escolha é orientada pela característica deste coeficiente de permitir o favorecimento das caracterícas presentes na fingerprint de uma moléculas em detrimento da outra através da introdução dos parâmetros $\alpha$ e $\beta$ na equação (\ref{eq:Tversky}). Através do aumento e diminuição dos parametros $\alpha$ e $\beta$, o sistema NatProDB consegue flexibilizar seu método para comparação de similaridade, permitindo assim a comparação não somente de similaridade molecular, mas também a busca de super-estruturas e/ou subestruturas de acordo com os valores selecionados para esses coeficientes. Assim como na etapa de pré-processamento das moléculas, a computação da similaridade entre estruturas através do coeficiente de Tversky é realizado também pela indigo toolkit, que possui uma rotina chamada \textit{similarity}(), que recebe duas fingerprints, e o tipo de coeficiente a ser aplicado (Coeficiente de Tversky para o caso do NatProDB), retornando para o sistema o grau de similaridade entre as duas fingerprints. Este método é aplicado serialmente entre a molécula de entrada (ligante) e cada uma das moléculas cadastrada no banco de dados do sistema, retornando para o pesquisador somente as moléculas cujo coeficiente de Tversky encontrado é superior ao grau de similaridade selecionado previamente pelo pesquisador.  
+
+\section{TESTES}
+
+Para realização dos testes no sistema, foram selecionados 8 moléculas-alvo  com estruturas moleculares diversificadas entre si, (citar moléculas) e que já são distríbuidas para o mercado como fármacos, ou seja substâncias que contem estruturas que possibilitam sua absorção e metabolização pelo corpo humano. Visando criar um banco controlado para os testes, foram baixadas 47770 moléculas de um banco molecular colaborativo disponibilizado pelo ZINC \cite{irwin2005zinc}. Foram realizadas consultas nesse banco colaborativo através do ZINC buscando moléculas com grau de similaridade superior a 80\% ou 0.8 a cada uma das moléculas-alvo selecionadas. A escolha do coeficiente de similaridade de 0.8 ou 80\% é baseada no trabalho de Drogra(2007) que afirma que estruturas com coeficiente de similaridade superior ou igual a 0,85 podem ser consideradas similares. Para cada uma dessas consultas o ZINC não retornou nenhuma molécula 80\% similar ou com grau de similaridade superior as moléculas alvo, de forma que para esse grau de similaridade, o banco para testes selecionado não possui estrura correspondente. 
+
+   
