--- a/indexMonografia.tex
+++ b/indexMonografia.tex
@@ -48,7 +48,7 @@
     \renewcommand{\theequation}{\arabic{equation}}
     \input{conteudo/introducao}
     \input{conteudo/fundamentacao}
-    \input{conteudo/desenvolvimento}
+  %  \input{conteudo/desenvolvimento}
     \input{conteudo/metodologia}
     \input{conteudo/resultados}
     \input{conteudo/conclusao}
