Matriz de Confusao descrita na metodologia, inicio da apresentação de resultados

--- a/abnt-uefs.bib
+++ b/abnt-uefs.bib
@@ -13,6 +13,22 @@
   url = {http://sourceforge.net/apps/ mediawiki/abntex/index.php},
   urlaccessdate = {8 nov. 2011}
 }
+@inproceedings{davis2006relationship,
+  title={The relationship between Precision-Recall and ROC curves},
+  author={Davis, Jesse and Goadrich, Mark},
+  booktitle={Proceedings of the 23rd international conference on Machine learning},
+  pages={233--240},
+  year={2006},
+  organization={ACM}
+}
+@inproceedings{davis2006relationship,
+  title={The relationship between Precision-Recall and ROC curves},
+  author={Davis, Jesse and Goadrich, Mark},
+  booktitle={Proceedings of the 23rd international conference on Machine learning},
+  pages={233--240},
+  year={2006},
+  organization={ACM}
+}
 @article{swamidass2007bounds,
   title={Bounds and algorithms for fast exact searches of chemical fingerprints in linear and sublinear time},
   author={Swamidass, S Joshua and Baldi, Pierre},
